--- a/project_required_files/deployment.yml
+++ b/project_required_files/deployment.yml
@@ -1,7 +1,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-    name: abctechnologies-dep
+    name: xyztechnologies-dep
 spec:
     replicas: 2
     minReadySeconds: 45
@@ -12,13 +12,13 @@ spec:
             maxSurge: 2
     selector:
         matchLabels:
-            app: abc-tech-app
+            app: xyz-tech-app
     template:
         metadata:
             labels:
-                app: abc-tech-app
+                app: xyz-tech-app
         spec:
             containers:
-                - image: shashthehunk05/abc-technologies
+                - image: shashthehunk05/xyz-technologies
                   name: app
 
