--- a/project_required_files/pod.yml
+++ b/project_required_files/pod.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: abc-tech-app-pod
+  name: xyz-tech-app-pod
   labels:
-    app: abc-tech-app
+    app: xyz-tech-app
 spec:
   containers:
     - name: app
-      image: shashthehunk05/abc-technologies
+      image: shashthehunk05/xyz-technologies
